<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_app"
        android:textSize="@dimen/title"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_main_message_popup_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_msg_1"
            />

        <Space
            android:layout_width="@dimen/margin"
            android:layout_height="0dp"
            />

        <Button
            android:id="@+id/btn_main_message_popup_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_msg_2"
            />

        <Space
            android:layout_width="@dimen/margin"
            android:layout_height="0dp"
            />

        <Button
            android:id="@+id/btn_main_message_popup_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_hello"
            android:enabled="false"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_main_message_popup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/initial_msg"
        android:textSize="18sp"
        android:layout_marginBottom="30dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_demo_form"
        android:textSize="25sp"
        android:layout_marginStart="10sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_main_form_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:imeOptions="actionDone"
            android:textColor="@color/pink"
            android:backgroundTint="@color/pink"
            />

        <Button
            android:id="@+id/btn_main_form_valid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#009F00"
            android:text="@string/btn_valid"
            android:textStyle="bold"
            android:textColor="#18FFC9"
            />

    </LinearLayout>

</LinearLayout>